# iterm-mcp-claude-agency

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SOLUTION_SUMMARY.md  pyproject.toml  run_server.py
.claude/commands/: session-ids.md
.github/workflows/: ci.yml
core/: agents.py  bus.py  coordination.py  dashboard.py  definer_verbs.py  driver.py  feedback.py  flows.py  git_integration.py  handoff.py  layouts.py  models.py  projects.py  redaction.py  session.py  terminal.py  termination.py  test_window_tracker.py
core/voice/: __init__.py  __main__.py  capture.py  cli.py  match.py  models.py  session.py  stt.py  tts.py
docs/: MIGRATION-singleton-daemon.md  TEST_ACTION_ITEMS.md  TEST_AUDIT_README.md  git-session-tracking.md  iterm-api-reference.md  tool-noun-extraction.md
docs/archive/: AUDIT_SUMMARY.md  EPIC_PROPOSAL_INDEX.md  EPIC_PROPOSAL_MULTI_AGENT_ORCHESTRATION.md  EPIC_PROPOSAL_QUICK_REFERENCE.md  EPIC_PROPOSAL_README.md  EPIC_PROPOSAL_SUMMARY.md  EPIC_RECOMMENDATION.md  EPIC_REVIEW_COMMENT.md  EPIC_STATUS.md  FOLLOWUP_ISSUES.md  IMPROVEMENT_ROADMAP.md  README.md  README_UPDATE_PLAN.md
docs/examples/: hooks-settings.json
docs/research/: 2026-06-12-agent-comms-and-cc-messages.md  2026-06-12-controide-iterm-driver.md
docs/superpowers/plans/: 2026-04-25-root-cleanup.md  2026-06-12-agent-bus-phase1.md  2026-06-12-controide-phase0.md  2026-06-12-singleton-daemon-dual-platform.md  2026-06-13-background-window-default.md  2026-06-13-mc-coercion.md  2026-06-13-project-segmentation.md  2026-06-13-prune-samples.md  2026-06-13-test-window-hygiene.md  2026-06-15-voice-control.md
docs/superpowers/specs/: 2026-06-13-project-segmentation-design.md  2026-06-15-voice-control-design.md
examples/: git_session_integration.py
hooks/: driver_hook.py  mc_toggle.sh  pretooluse.sh  project_declare.py  project_declare.sh  stop.sh  userpromptsubmit.sh
iterm_mcpy/: __init__.py  __main__.py  app_context.py  daemon.py  dispatcher.py  errors.py  fastmcp_server.py  helpers.py  main.py  project_cli.py  responses.py  shim.py
iterm_mcpy/tools/: __init__.py  _callbacks.py  agent_hooks.py  agents.py  agents_v2.py  bus.py  commands.py  control.py  delegate.py  delegate_v2.py  feedback.py  feedback_v2.py  managers.py  managers_v2.py  memory.py  memory_v2.py  messages.py  messages_v2.py  modifications.py  monitoring.py  notifications.py  orchestrate.py  orchestrate_v2.py  orchestration.py  projects.py  roles.py  roles_v2.py  services.py  services_v2.py  sessions.py  sessions_v2.py  subscribe.py  subscribe_v2.py  teams.py  teams_v2.py  telemetry.py  telemetry_v2.py  wait.py  wait_for.py  wait_for_v2.py  (+2 more)
research/: RESEARCH_SYNTHESIS_ADDENDUM.md  community-insights.md  github-findings.md  pypi-findings.md  synthesized-findings.md
scripts/: download_samples.py  get-pr-comment-snippet.py  install-git-hooks.sh  it2api_samples.json  post-commit  prepare-commit-msg  query-session.py  test_baseline.py
scripts/iterm2_samples/extracted/ccs/: setup.cfg
scripts/iterm2_samples/extracted/change_default_profile/: setup.cfg
scripts/iterm2_samples/extracted/cls/: setup.cfg
scripts/iterm2_samples/extracted/colorhost/: setup.cfg
scripts/iterm2_samples/extracted/current_preset/: setup.cfg
scripts/iterm2_samples/extracted/enable_broadcasting/: setup.cfg
skills/agent-orchestration/: SKILL.md
skills/feedback-workflow/: SKILL.md
skills/session-management/: SKILL.md
static/: driver.css  driver.html  driver.js
tests/: live_iterm_base.py  test_action_tools.py  test_action_tools_v2.py  test_active_guard.py  test_advanced_features.py  test_agents.py  test_agents_v2.py  test_app_context.py  test_background_window.py  test_basic_functionality.py  test_bus.py  test_cli.py  test_daemon.py  test_daemon_port.py  test_daemon_version.py  test_definer_verbs.py  test_dispatcher.py  test_download_samples.py  test_driver.py  test_envelope.py  test_errors.py  test_event_bus_introspection.py  test_expect.py  test_feedback_dispatch.py  test_feedback_v2.py  test_git_integration.py  test_iterm_session_naming.py  test_line_limits.py  test_logging.py  test_managers.py  test_managers_v2.py  test_mc_coercion.py  test_memory_dispatch.py  test_memory_v2.py  test_persistent_session.py  test_project_cli.py  test_project_hook.py  test_projects.py  test_projects_tool.py  test_query_feedback.py  (+22 more)
(+88 files in other folders)
