[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterm-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for iTerm2"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ferris Lucas", email = "ferrislucas@github.com"}
]
dependencies = [
    "iterm2>=2.7",
    "pyzmq>=25.0.0",
    "pyyaml>=6.0",
    "mcp>=1.3.0",
    "grpcio>=1.76.0",
    "protobuf>=6.31.1",
]

[project.optional-dependencies]
# OpenTelemetry for observability - install with: pip install iterm-mcp[otel]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-semantic-conventions>=0.41b0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "grpcio-tools>=1.76.0",
]

[project.scripts]
iterm-mcp = "iterm_mcpy.main:main"
iterm-mcp-server = "iterm_mcpy.mcp_server:main"
iterm-mcp-fastmcp = "iterm_mcpy.fastmcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["core", "iterm_mcpy", "iterm_mcpy.tools", "utils"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["core", "iterm_mcpy", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "iterm_mcpy/iterm_mcp_pb2.py",
    "iterm_mcpy/iterm_mcp_pb2_grpc.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]